--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,13 @@
     <title>Maroon Panther</title>
   </head>
   <body>
-    Hello World.
+    <div>
+      <p>
+        Page Under Construction.
+      </p>
+      <p>
+        Coming soon ... Dark Nun and Paladin.
+      </p>
+    </div>
   </body>
 </html>
